# hermetic-python-bzlmod

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  requirements.in  requirements_lock.txt
rules/: BUILD.bazel  ipython.bzl  jupyter.py  shell.py
src/: BUILD.bazel  pytest_test_lib.py
tests/: BUILD.bazel  pytest_test_lib_test.py
