# -------------------------------------
# Copyright (c) 2023, Dror Kabely
# -------------------------------------
#

load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@pip//:requirements.bzl", "requirement")

load("//rules:ipython.bzl", "ipython", "jupyter")


ipython(
    name = "shell",
    deps = []
)

jupyter(
    name = "jupyter",
    deps = []
)